docs: Adiciona análise crítica e arruma imagens e vídeos quebrados

--- a/docs/PadroesDeProjeto/3.3.2Strategy.md
+++ b/docs/PadroesDeProjeto/3.3.2Strategy.md
@@ -136,15 +136,20 @@ Para validar a implementação do padrão Strategy, foi realizado um teste que c
 
 No teste, foi criado o usuário "Maria Silva" que começa com saldo 0, uma lista com tuplas que contém o tipo da ação e quantidade de tokens esperada que foi definida por cada estratégia concreta. Depois disso, cria uma instância de AcaoSustentavel, e depois chama token_service.registrar_tokens(usuario,acao) e escolhe a estratégia com base no tipo da ação. depois é comparado os tokens realmente calculados com os tokens esperados, e se forem iguais quer dizer que o padrão GOF Strategy está funcionando corretamente. Observamos que os valores calculados eram iguais aos valores esperados, confirmando que o Strategy funciona corretamente.
 
-[Teste Strategy](https://youtube.com/embed/RYR31CU8nts)
+[![Teste Strategy](https://img.youtube.com/vi/RYR31CU8nts/0.jpg)](https://youtu.be/RYR31CU8nts)
+<iframe width="560" height="315"
+  src="https://www.youtube.com/embed/RYR31CU8nts"
+  title="YouTube video player" frameborder="0"
+  allowfullscreen></iframe>
 
-Link do vídeo pro Youtube: [Teste Strategy](https://youtu.be/RYR31CU8nts)
+Link da reunião em: https://youtu.be/RYR31CU8nts
+
 
 ### 4.2 Resultado do teste
 
 O print abaixo mostra o resultado do teste, evidenciando que diferentes variáveis que receberam TokenService() apontam para o mesmo objeto.
 
-[Print Strategy](../assets/strategy_print.png)
+![Print Strategy](../assets/strategy_print.png)
 
 ## 5. Diagrama
 
@@ -152,16 +157,20 @@ O print abaixo mostra o resultado do teste, evidenciando que diferentes variáve
 
 A seguir temos o diagrama do GOF Strategy: 
 
-[Diagrama do Strategy](../assets/strategy_diagrama.jpg)
+![Diagrama do Strategy](../assets/strategy_diagrama.jpg)
 
 
 ### 5.2 Gravação da produção do Diagrama Strategy
 
 A seguir está disponível a gravação em vídeo que ilustra o processo de discussão e implementação do diagrama:
 
-[Gravação Diagrama Strategy](https://youtube.com/embed/MLlEwYp9hVY)
+[![Gravação Diagrama Strategy](https://img.youtube.com/vi/MLlEwYp9hVY/0.jpg)](https://youtu.be/MLlEwYp9hVY)
+<iframe width="560" height="315"
+  src="https://www.youtube.com/embed/MLlEwYp9hVY"
+  title="YouTube video player" frameborder="0"
+  allowfullscreen></iframe>
 
-Link do vídeo pro Youtube: [Gravação Diagrama Strategy](https://youtu.be/MLlEwYp9hVY)
+Link da reunião em: https://youtu.be/MLlEwYp9hVY
 
 
 
@@ -169,6 +178,7 @@ Link do vídeo pro Youtube: [Gravação Diagrama Strategy](https://youtu.be/MLlE
 
 | Nome do Integrante | Artefato | Descrição da Contribuição | Análise Crítica |
 |--------------------|----------|---------------------------|-----------------|
+| Artur Mendonça Arruda| Diagrama Strategy, código e documentação | Participei da implementação do código do Strategy, da documentação e também do desenvolvimento do diagrama. Além disso, ajudei a corrigir imagens e vídeos que estavam quebrados na versão anterior do artefato. | O diagrama não foi muito difícil de montar em si, mas foi um pouco frustrante por conta de problemas de usabilidade do draw.io. No início, eu não estava encontrando a seta tracejada necessária para representar as relações de interface, e só percebi que precisava usá-la corretamente depois de montar quase todo o diagrama. Apesar disso, o resultado final ficou consistente com o código e com a modelagem planejada. |
 | Lucas Mendonça Arruda | Diagrama Strategy, código e teste  | Contribui na documentação do artefato, participei de forma efetiva no desenvolvimento do diagrama e nas gravações de teste. | Achei este artefato o mais trabalhoso no sentido de organização, de forma que fizesse sentido. Tive uma dificuldade inicial em compreender o padrão GOF Strategy. Porém, a parte da metodologia achei mais fácil. Acredito que o primeiro diagrama, embora não tenha sido a versão final, ficou bem próximo do diagrama final, mudando apenas o contexto de uma classe.
 |
 
@@ -204,7 +214,7 @@ GAMMA, Erich; HELM, Richard; JOHNSON, Ralph; VLISSIDES, John. *Design Patterns: 
 | 1.1    | Melhorando referências e adicionando metodologia | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
 | 1.2    | adicionando diagrama, análise do código, e melhorando metodologia | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
 | 1.3    | Adicionando Análise crítica |  [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 |  | |
-
+| 1.4    | Adicionando Análise crítica e arrumando imagens e vídeos quebrados |  [Artur Mendonça Arruda](https://github.com/ArtyMend07) | 24/10/2025 |  | |
 
 
 
