Fix: Corrige abas da sidebar e arruma imagens e vídeos quebrados do decorator

--- a/docs/PadroesDeProjeto/3.2.2.Decorador.md
+++ b/docs/PadroesDeProjeto/3.2.2.Decorador.md
@@ -92,15 +92,19 @@ Para validar a implementação do padrão Decorator, foram realizados testes que
 
 No teste, um serviço-base de registro de ação é instanciado. Em seguida, ele é decorado com as classes `LogDecorator` e `BonusDecorator`. Duas ações são testadas: uma que gera 10 tokens (sem bônus) e outra que gera 25 tokens (com bônus). Observamos que o log foi impresso para ambas, e o bônus foi aplicado apenas na segunda, confirmando que o Decorator funciona corretamente.
 
-[Teste Decorator](https://youtube.com/embed/wU0gt9UPjpM)
+[![Teste Decorator](https://img.youtube.com/vi/wU0gt9UPjpM/0.jpg)](https://youtu.be/wU0gt9UPjpM)
+<iframe width="560" height="315"
+  src="https://www.youtube.com/embed/wU0gt9UPjpM"
+  title="Teste Decorator" frameborder="0"
+  allowfullscreen></iframe>
 
-Link do vídeo pro Youtube: [Teste Decorator](https://youtu.be/wU0gt9UPjpM)
+Link da reunião em: https://youtu.be/wU0gt9UPjpM
 
 ### 4.2 Print do teste
 
 O print abaixo mostra o resultado do teste, evidenciando que as lógicas de log (executada antes) e de bônus (executada depois, condicionalmente) foram aplicadas corretamente ao serviço original.
 
-[Print Decorator](../assets/decorator_print.png)
+![Print Decorator](../assets/decorator_print.png)
 
 ## 5. Diagrama
 
@@ -108,16 +112,19 @@ O print abaixo mostra o resultado do teste, evidenciando que as lógicas de log 
 
 A seguir temos o diagrama do GOF Decorator:
 
-[Diagrama do Decorator](../assets/decorator_diagrama.jpg)
+![Diagrama do Decorator](../assets/decorator_diagrama.jpg)
 
 ### 5.2 Gravação da produção do Diagrama Decorator
 
 A seguir está disponível a gravação em vídeo que ilustra o processo de discussão e implementação do diagrama:
 
-[Gravação Diagrama Decorator](https://youtube.com/embed/J2H_Tz10bG8)
+[![Gravação Diagrama Strategy](https://img.youtube.com/vi/J2H_Tz10bG8/0.jpg)](https://youtu.be/J2H_Tz10bG8)
+<iframe width="560" height="315"
+  src="https://www.youtube.com/embed/J2H_Tz10bG8"
+  title="Gravação Diagrama Decorator" frameborder="0"
+  allowfullscreen></iframe>
 
-Link do vídeo pro Youtube: [Gravação Diagrama Strategy](https://youtu.be/J2H_Tz10bG8)
-
+Link da reunião em: https://youtu.be/J2H_Tz10bG8
 
 
 ## 6. Participação na Produção do Artefato
@@ -149,3 +156,4 @@ Disponível no sistema Aprender 3 da Universidade de Brasília. Acesso em: 24 de
 | --- | --- | --- | --- | --- | --- |
 | 1.0 | Criação do documento, com introdução, metodologia e o código | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 | | |
 | 1.1 | Adição de teoria no tópico 3, arrumando links e metodologia e adicionando análise crítica |  [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 | | |
+| 1.2    | Correção das imagens quebradas e adição de embed dos vídeos | [Artur Mendonça Arruda](https://github.com/ArtyMend07) | 24/10/2025 |  | 
