ajustando link comprobatorio

--- a/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
+++ b/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
@@ -19,7 +19,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 | Artur Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 | Lucas Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Gustavo Gontijo Lima | 1. Implementação do código do Padrão Proxy. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.1.Proxy..md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/actions/servicos/AcaoProxy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_proxy_gof_standalone.py). |
+| Gustavo Gontijo Lima | 1. Implementação do código do Padrão Proxy. 2. Elaboração do diagrama UML. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.1.Proxy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/actions/servicos/AcaoProxy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_proxy_gof_standalone.py). |
 
 ## Padrão GoF Comportamental
 
