docs: adicionando contribuição e analise crítica

--- a/docs/PadroesDeProjeto/3.2.2.Decorador.md
+++ b/docs/PadroesDeProjeto/3.2.2.Decorador.md
@@ -132,7 +132,7 @@ Link da reunião em: https://youtu.be/J2H_Tz10bG8
 | Nome do Integrante | Artefato | Descrição da Contribuição | Análise Crítica |
 |---|---|---|---|
 | Artur Mendonça Arruda | Diagrama Decorator e Documentação | Contribuição na elaboração do diagrama e na escrita da documentação do padrão. | O diagrama e o código estão perfeitamente alinhados. O ponto mais forte é a aderência ao Princípio Aberto/Fechado. A classe base, a RegistraAcaoBase no diagrama, não precisa ser alterada para que novas funcionalidades, como log e bônus, sejam adicionadas. Isso é feito apenas "embrulhando" o objeto original com os decoradores. A implementação também mostra a flexibilidade do padrão: o LogDecorator adiciona sua lógica, o print, antes de chamar o componente interno, enquanto o BonusDecorator chama o componente, pega o resultado, os tokens, e só então aplica sua lógica depois. Como análise crítica, o principal custo desse padrão é a verbosidade. Para adicionar uma simples linha de print, foi preciso criar a classe LogDecorator inteira. Em um sistema grande, isso pode levar a uma proliferação de classes muito pequenas, o que pode dificultar o gerenciamento. Outro ponto crítico é que a ordem da "pilha" de decoradores importa. O resultado de BonusDecorator(LogDecorator(base)) pode ser diferente de LogDecorator(BonusDecorator(base)). Isso coloca uma responsabilidade maior no código cliente que monta o objeto final. No geral, é uma implementação livro-texto do padrão, muito boa para garantir que o sistema seja extensível sem precisar modificar o código central. |
-| Gabriel Lopes | Diagrama Decorator e Documentação | Contribuição na elaboração do diagrama e na escrita da documentação do padrão. | |
+| Gabriel Lopes de Amorim| Diagrama Decorator e Documentação | Contribuição na elaboração do diagrama e na escrita da documentação do padrão. | Achei interessante trabalhar com o Decorator porque ele mostra bem como adicionar funcionalidades sem mexer no código original. Durante a elaboração do diagrama, consegui entender melhor como funciona essa ideia de "embrulhar" um objeto com outro para adicionar comportamentos. O que mais me chamou atenção foi a flexibilidade de poder combinar os decoradores de diferentes formas, tipo usar o log antes e o bônus depois. Por outro lado, percebi que pode acabar gerando muitas classes pequenas, o que pode complicar um pouco quando o projeto crescer. Também vi que precisa tomar cuidado com a ordem que coloca os decoradores, porque isso muda o resultado final. No geral, foi produtivo trabalhar no diagrama e na documentação, principalmente fazendo junto com a equipe, porque ajudou a fixar melhor o conceito do padrão.|
 | Lucas Mendonça Arruda | Diagrama Decorator e Documentação | Contribuição na elaboração do diagrama, nos testes e na escrita da documentação do padrão. | Achei esse artefato meio complexo de trabalhar devido ao tamanho e à quantidade de classes envolvidas. Junto com minha equipe, percebemos que a estrutura atual da pasta decorators não estava refletida no diagrama de pacotes, o que indica que precisaremos atualizá-lo, o que dá mais trabalho. Apesar disso, achei bastante produtiva a parte dos diagramas e dos testes, especialmente usando a técnica de criar e explicar enquanto gravávamos, pois isso ajuda a se recordar do que foi discutido e facilita o entendimento da implementação do padrão Decorator. |
 
 ## 7. Conclusão
@@ -157,3 +157,5 @@ Disponível no sistema Aprender 3 da Universidade de Brasília. Acesso em: 24 de
 | 1.0 | Criação do documento, com introdução, metodologia e o código | [Artur Mendonça Arruda](https://github.com/ArtyMend07), [Gabriel Lopes ](https://github.com/BrzGab) e [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 | | |
 | 1.1 | Adição de teoria no tópico 3, arrumando links e metodologia e adicionando análise crítica |  [Lucas Mendonça Arruda](https://github.com/lucasarruda9) | 24/10/2025 | | |
 | 1.2    | Correção das imagens quebradas e adição de embed dos vídeos | [Artur Mendonça Arruda](https://github.com/ArtyMend07) | 24/10/2025 |  | 
+| 1.3    | Adição da contribuição e da análise crítica |  [Gabriel Lopes de Amorim](https://github.com/BrzGab) | 24/10/2025 |  | |
+
