add: documentação e diagrama do Abstract Factory (SustentabilidadeJá)

--- a/docs/PadroesDeProjeto/3.1.3.AbstractMethod.md
+++ b/docs/PadroesDeProjeto/3.1.3.AbstractMethod.md
@@ -47,176 +47,217 @@ A estrutura projetada define:
 
 | Elemento | Especificação |
 |-----------|----------------|
-| **Linguagem** | Java |
+| **Linguagem** | Python |
 | **Paradigma** | Orientação a Objetos |
 | **Padrão** | Abstract Factory (GoF Criacional) |
-| **Ambiente** | VS Code / IntelliJ IDEA |
-| **Versão JDK** | 17+ |
+| **Ambiente** | VS Code / Jupyter / PyCharm |
+| **Versão Python** | 3.11+ |
 
 
 ## 3. Implementação
 
 ### 3.1. Interfaces dos Produtos Abstratos
 
-```java
-// ActionLogger.java
-package br.com.sustentabilidadeja.factory;
-import java.util.Map;
+```python
+# ActionLogger.py
+from abc import ABC, abstractmethod
 
-public interface ActionLogger {
-    boolean logAction(String userId, Map<String, Object> payload);
-}
+class ActionLogger(ABC):
+    @abstractmethod
+    def logAction(self, userId: str, payload: dict) -> bool:
+        pass
 
-// TokenCalculator.java
-package br.com.sustentabilidadeja.factory;
-import java.util.Map;
 
-public interface TokenCalculator {
-    int calculateTokens(Map<String, Object> payload);
-}
-// RewardIssuer.java
-package br.com.sustentabilidadeja.factory;
-public interface RewardIssuer {
-    String issueReward(String userId, int tokens);
-}
+# TokenCalculator.py
+from abc import ABC, abstractmethod
+
+class TokenCalculator(ABC):
+    @abstractmethod
+    def calculateTokens(self, payload: dict) -> int:
+        pass
+
+
+# RewardIssuer.py
+from abc import ABC, abstractmethod
+
+class RewardIssuer(ABC):
+    @abstractmethod
+    def issueReward(self, userId: str, tokens: int) -> str:
+        pass
 ```
-```java
+
 ### 3.2. Interface da Fábrica Abstrata
+```python
+# SustainabilityFactory.py
+from abc import ABC, abstractmethod
+from ActionLogger import ActionLogger
+from TokenCalculator import TokenCalculator
+from RewardIssuer import RewardIssuer
 
-```java
-// SustainabilityFactory.java
-package br.com.sustentabilidadeja.factory;
+class SustainabilityFactory(ABC):
+    @abstractmethod
+    def createLogger(self) -> ActionLogger:
+        pass
 
-public interface SustainabilityFactory {
-    ActionLogger createLogger();
-    TokenCalculator createCalculator();
-    RewardIssuer createRewardIssuer();
-}
+    @abstractmethod
+    def createCalculator(self) -> TokenCalculator:
+        pass
+
+    @abstractmethod
+    def createRewardIssuer(self) -> RewardIssuer:
+        pass
 ```
 ### 3.3. Fábricas e Produtos Concretos
+## Fábrica de Reciclagem
+```python
+# RecyclingFactory.py
+from SustainabilityFactory import SustainabilityFactory
+from RecyclingLogger import RecyclingLogger
+from RecyclingTokenCalculator import RecyclingTokenCalculator
+from RecyclingRewardIssuer import RecyclingRewardIssuer
 
-```java
-// Fábrica de Reciclagem
-package br.com.sustentabilidadeja.factory.recycling;
-import br.com.sustentabilidadeja.factory.*;
-import java.util.Map;
+class RecyclingFactory(SustainabilityFactory):
+    def createLogger(self):
+        return RecyclingLogger()
 
-public class RecyclingLogger implements ActionLogger {
-    public boolean logAction(String userId, Map<String, Object> payload) {
-        System.out.println("[RECICLAGEM] Usuário " + userId + " registrou: " + payload);
-        return true;
-    }
-}
+    def createCalculator(self):
+        return RecyclingTokenCalculator()
 
-public class RecyclingTokenCalculator implements TokenCalculator {
-    public int calculateTokens(Map<String, Object> payload) {
-        double kg = ((Number) payload.getOrDefault("kg", 0)).doubleValue();
-        return (int) Math.floor(kg / 0.5);
-    }
-}
+    def createRewardIssuer(self):
+        return RecyclingRewardIssuer()
 
-public class RecyclingRewardIssuer implements RewardIssuer {
-    public String issueReward(String userId, int tokens) {
-        return "[RECICLAGEM] " + tokens + " tokens creditados (cupom ecológico emitido)";
-    }
-}
+# RecyclingLogger.py
+from ActionLogger import ActionLogger
 
-public class RecyclingFactory implements SustainabilityFactory {
-    public ActionLogger createLogger() { return new RecyclingLogger(); }
-    public TokenCalculator createCalculator() { return new RecyclingTokenCalculator(); }
-    public RewardIssuer createRewardIssuer() { return new RecyclingRewardIssuer(); }
-}
-//  Fábrica de Transporte Público
-package br.com.sustentabilidadeja.factory.transport;
-import br.com.sustentabilidadeja.factory.*;
-import java.util.Map;
+class RecyclingLogger(ActionLogger):
+    def logAction(self, userId: str, payload: dict) -> bool:
+        print(f"[RECICLAGEM] Usuário {userId} registrou: {payload}")
+        return True
 
-public class PublicTransportLogger implements ActionLogger {
-    public boolean logAction(String userId, Map<String, Object> payload) {
-        System.out.println("[TRANSPORTE] Ação registrada: " + payload);
-        return true;
-    }
-}
+# RecyclingTokenCalculator.py
+from TokenCalculator import TokenCalculator
 
-public class PublicTransportTokenCalculator implements TokenCalculator {
-    public int calculateTokens(Map<String, Object> payload) {
-        int viagens = ((Number) payload.getOrDefault("viagens", 0)).intValue();
-        return viagens * 2;
-    }
-}
+class RecyclingTokenCalculator(TokenCalculator):
+    def calculateTokens(self, payload: dict) -> int:
+        kg = payload.get("kg", 0)
+        return int(kg / 0.5)
 
-public class PublicTransportRewardIssuer implements RewardIssuer {
-    public String issueReward(String userId, int tokens) {
-        return "[TRANSPORTE] " + tokens + " tokens convertidos em créditos de mobilidade.";
-    }
-}
+# RecyclingRewardIssuer.py
+from RewardIssuer import RewardIssuer
 
-public class PublicTransportFactory implements SustainabilityFactory {
-    public ActionLogger createLogger() { return new PublicTransportLogger(); }
-    public TokenCalculator createCalculator() { return new PublicTransportTokenCalculator(); }
-    public RewardIssuer createRewardIssuer() { return new PublicTransportRewardIssuer(); }
-}
+class RecyclingRewardIssuer(RewardIssuer):
+    def issueReward(self, userId: str, tokens: int) -> str:
+        return f"[RECICLAGEM] {tokens} tokens creditados (cupom ecológico emitido)"
 
-// Fábrica de economia de energia
-package br.com.sustentabilidadeja.factory.energy;
-import br.com.sustentabilidadeja.factory.*;
-import java.util.Map;
+```
+## Fábrica de Transporte Público
+```python
+# PublicTransportFactory.py
+from SustainabilityFactory import SustainabilityFactory
+from PublicTransportLogger import PublicTransportLogger
+from PublicTransportTokenCalculator import PublicTransportTokenCalculator
+from PublicTransportRewardIssuer import PublicTransportRewardIssuer
 
-public class EnergySavingLogger implements ActionLogger {
-    public boolean logAction(String userId, Map<String, Object> payload) {
-        System.out.println("[ENERGIA] Ação registrada: " + payload);
-        return true;
-    }
-}
+class PublicTransportFactory(SustainabilityFactory):
+    def createLogger(self):
+        return PublicTransportLogger()
 
-public class EnergySavingTokenCalculator implements TokenCalculator {
-    public int calculateTokens(Map<String, Object> payload) {
-        double kwh = ((Number) payload.getOrDefault("kwh", 0)).doubleValue();
-        return Math.min(20, (int) Math.floor(kwh));
-    }
-}
+    def createCalculator(self):
+        return PublicTransportTokenCalculator()
 
-public class EnergySavingRewardIssuer implements RewardIssuer {
-    public String issueReward(String userId, int tokens) {
-        return "[ENERGIA] " + tokens + " tokens convertidos em desconto na conta de luz.";
-    }
-}
+    def createRewardIssuer(self):
+        return PublicTransportRewardIssuer()
 
-public class EnergySavingFactory implements SustainabilityFactory {
-    public ActionLogger createLogger() { return new EnergySavingLogger(); }
-    public TokenCalculator createCalculator() { return new EnergySavingTokenCalculator(); }
-    public RewardIssuer createRewardIssuer() { return new EnergySavingRewardIssuer(); }
-}
+# PublicTransportLogger.py
+from ActionLogger import ActionLogger
 
+class PublicTransportLogger(ActionLogger):
+    def logAction(self, userId: str, payload: dict) -> bool:
+        print(f"[TRANSPORTE] Ação registrada: {payload}")
+        return True
+
+# PublicTransportTokenCalculator.py
+from TokenCalculator import TokenCalculator
+
+class PublicTransportTokenCalculator(TokenCalculator):
+    def calculateTokens(self, payload: dict) -> int:
+        viagens = payload.get("viagens", 0)
+        return viagens * 2
+
+# PublicTransportRewardIssuer.py
+from RewardIssuer import RewardIssuer
+
+class PublicTransportRewardIssuer(RewardIssuer):
+    def issueReward(self, userId: str, tokens: int) -> str:
+        return f"[TRANSPORTE] {tokens} tokens convertidos em créditos de mobilidade."
 
 ```
 
+## Fábrica de Economia de Energia
+```python
+# EnergySavingFactory.py
+from SustainabilityFactory import SustainabilityFactory
+from EnergySavingLogger import EnergySavingLogger
+from EnergySavingTokenCalculator import EnergySavingTokenCalculator
+from EnergySavingRewardIssuer import EnergySavingRewardIssuer
+
+class EnergySavingFactory(SustainabilityFactory):
+    def createLogger(self):
+        return EnergySavingLogger()
+
+    def createCalculator(self):
+        return EnergySavingTokenCalculator()
+
+    def createRewardIssuer(self):
+        return EnergySavingRewardIssuer()
+
+# EnergySavingLogger.py
+from ActionLogger import ActionLogger
+
+class EnergySavingLogger(ActionLogger):
+    def logAction(self, userId: str, payload: dict) -> bool:
+        print(f"[ENERGIA] Ação registrada: {payload}")
+        return True
+
+# EnergySavingTokenCalculator.py
+from TokenCalculator import TokenCalculator
+
+class EnergySavingTokenCalculator(TokenCalculator):
+    def calculateTokens(self, payload: dict) -> int:
+        kwh = payload.get("kwh", 0)
+        return min(20, int(kwh))
+
+# EnergySavingRewardIssuer.py
+from RewardIssuer import RewardIssuer
+
+class EnergySavingRewardIssuer(RewardIssuer):
+    def issueReward(self, userId: str, tokens: int) -> str:
+        return f"[ENERGIA] {tokens} tokens convertidos em desconto na conta de luz."
+```
 ### 3.4. Classe Cliente (Uso do Abstract Factory)
 
-```java
-package br.com.sustentabilidadeja;
-import br.com.sustentabilidadeja.factory.*;
-import br.com.sustentabilidadeja.factory.recycling.*;
-import java.util.HashMap;
-import java.util.Map;
+```python
+# App.py
+from RecyclingFactory import RecyclingFactory
 
-public class App {
-    public static void main(String[] args) {
-        SustainabilityFactory factory = new RecyclingFactory();
+def main():
+    factory = RecyclingFactory()
 
-        Map<String, Object> payload = new HashMap<>();
-        payload.put("kg", 2.5);
+    payload = {"kg": 2.5}
 
-        ActionLogger logger = factory.createLogger();
-        TokenCalculator calc = factory.createCalculator();
-        RewardIssuer reward = factory.createRewardIssuer();
+    logger = factory.createLogger()
+    calc = factory.createCalculator()
+    reward = factory.createRewardIssuer()
 
-        logger.logAction("user001", payload);
-        int tokens = calc.calculateTokens(payload);
-        System.out.println(reward.issueReward("user001", tokens));
-    }
-}
+    logger.logAction("user001", payload)
+    tokens = calc.calculateTokens(payload)
+    print(reward.issueReward("user001", tokens))
+
+if __name__ == "__main__":
+    main()
+
 ```
+![Resultado - Abstract Factory](../imagens/image.png)
 
 ## 4. Modelagem do Abstract Factory
 
@@ -269,6 +310,7 @@ https://youtu.be/anJKE48r9Lw
 | ------ | ------------------------------------ | ------------------------------------------------------------------------------------------------- | ---------- | ----------------------------------------------------------------------------------------------------------- | --------- |
 | 1.0    | Criação do documento, com introdução, metodologia, o código e diagrama | [Ana Luiza Komatsu](https://github.com/luluaroeira), [Gustavo Gontijo](https://github.com/Guga301104) e [Davi Emanuel](https://github.com/daviRolvr) | 23/10/2025 |  | |
 | 1.1    | Adicionando explicação do código e gravação do diagrama| [Ana Luiza Komatsu](https://github.com/luluaroeira), [Gustavo Gontijo](https://github.com/Guga301104) e [Davi Emanuel](https://github.com/daviRolvr) | 24/10/2025 |  | |
+| 1.2    | Ajustes| [Ana Luiza Komatsu](https://github.com/luluaroeira), [Gustavo Gontijo](https://github.com/Guga301104) e [Davi Emanuel](https://github.com/daviRolvr) | 24/10/2025 |  | |
 
 
 
