--- a/docs/PadroesDeProjeto/3.3.3Strategy.md
+++ b/docs/PadroesDeProjeto/3.3.3Strategy.md
@@ -179,7 +179,7 @@ Link da reunião em: https://youtu.be/MLlEwYp9hVY
 | Nome do Integrante | Artefato | Descrição da Contribuição | Análise Crítica |
 |--------------------|----------|---------------------------|-----------------|
 | Artur Mendonça Arruda| Diagrama Strategy, código e documentação | Participei da implementação do código do Strategy, da documentação e também do desenvolvimento do diagrama. Além disso, ajudei a corrigir imagens e vídeos que estavam quebrados na versão anterior do artefato. | O diagrama não foi muito difícil de montar em si, mas foi um pouco frustrante por conta de problemas de usabilidade do draw.io. No início, eu não estava encontrando a seta tracejada necessária para representar as relações de interface, e só percebi que precisava usá-la corretamente depois de montar quase todo o diagrama. Apesar disso, o resultado final ficou consistente com o código e com a modelagem planejada. |
-| Lucas Mendonça Arruda | Diagrama Strategy, código e teste  | Contribui na documentação do artefato, participei de forma efetiva no desenvolvimento do diagrama e nas gravações de teste. | Achei este artefato o mais trabalhoso no sentido de organização, de forma que fizesse sentido. Tive uma dificuldade inicial em compreender o padrão GOF Strategy. Porém, a parte da metodologia achei mais fácil. Acredito que o primeiro diagrama, embora não tenha sido a versão final, ficou bem próximo do diagrama final, mudando apenas o contexto de uma classe.
+| Lucas Mendonça Arruda | Diagrama Strategy, código e teste  | Contribui na documentação do artefato, participei de forma efetiva no desenvolvimento do diagrama e nas gravações de teste. | Achei este artefato o mais trabalhoso no sentido de organização, de forma que fizesse sentido. Tive uma dificuldade inicial em compreender o padrão GOF Strategy. Porém, a parte da metodologia achei mais fácil. mas achei bastante interessante a comunicação dos integrantes para a evolução do artefato.
 | Gabriel Lopes de Amorim | Diagrama Strategy, código e teste  | Atuei na implementação do codigo do padrão Strategy e do Diagrama, também realizei os testes de validação do código e participei ativamente nas gravações, tanto da explicação do funcionamento do padrão quanto da demonstração dos testes executados.| No começo, tive dificuldade para entender como separar as responsabilidades entre a interface abstrata e as estratégias concretas. Achei interessante ver como o Strategy permite adicionar novas formas de calcular tokens sem precisar mexer no resto do código. A parte dos testes foi mais tranquila, e consegui validar que cada estratégia estava calculando os tokens corretamente. No geral, foi um bom aprendizado sobre como usar padrões GOF na prática e ver eles funcionando no sistema.|
 
 ## 7. Conclusão
