--- a/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
+++ b/docs/PadroesDeProjeto/3.4.ParticipacoesPadroes.md
@@ -4,75 +4,25 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 
 ## Padrão GoF Criacional
 
-|Nome do Membro | Contribuição (Padrões – FOCO_1) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
-
-| Artur Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de
-gerenciamento de tokens (TokenService). 2. Elaboração do
-diagrama UML do Singleton. 3. Desenvolvimento de testes. 4.
-Escrita da documentação. 5. Leitura de materiais bibliográficos:
-Design Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Singleton no serviço de
-gerenciamento de tokens (TokenService). 2. Elaboração do
-diagrama UML do Singleton. 3. Desenvolvimento de testes. 4.
-Escrita da documentação. 5. Leitura de materiais bibliográficos:
-Design Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de
-gerenciamento de tokens (TokenService). 2. Elaboração do
-diagrama UML do Singleton. 3. Desenvolvimento de testes. 4.
-Escrita da documentação. 5. Leitura de materiais bibliográficos:
-Design Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+|Nome do Membro | Contribuição (Padrões – FOCO_1) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---|---|---|---|
+| Artur Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Singleton no serviço de gerenciamento de tokens (TokenService). 2. Elaboração do diagrama UML do Singleton. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994) | Excelente | Registro nos Versionamentos do Documento de GoF Criacional, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.1.1Singleton.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_servico.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 
 
 ## Padrão GoF Estrutural
 
-|Nome do Membro | Contribuição (Padrões – FOCO_2) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
-
-| Artur Mendonça Arruda | 1. Implementação do código do Padrão Decorator
-(AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração
-do diagrama UML do Decorator. 3. Desenvolvimento de testes.
-4. Escrita da documentação. 5. Leitura de materiais
-bibliográficos: Design Patterns: Elements of Reusable Object-
-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Decorator
-(AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração
-do diagrama UML do Decorator. 3. Desenvolvimento de testes.
-4. Escrita da documentação. 5. Leitura de materiais
-bibliográficos: Design Patterns: Elements of Reusable Object-
-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Decorator
-(AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração
-do diagrama UML do Decorator. 3. Desenvolvimento de testes.
-4. Escrita da documentação. 5. Leitura de materiais
-bibliográficos: Design Patterns: Elements of Reusable Object-
-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+|Nome do Membro | Contribuição (Padrões – FOCO_2) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---|---|---|---|
+| Artur Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Decorator (AcaoDecorator, LogDecorator, BonusDecorator). 2. Elaboração do diagrama UML do Decorator. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.2.2.Decorador.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/decoradores/decorador_base.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
 
 ## Padrão GoF Comportamental
-|Nome do Membro | Contribuição (Padrões – FOCO_3) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
 
-| Artur Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy,
-ReciclagemStrategy, TransporteStrategy,
-EconomiaRecursosStrategy, DescarteCorretoStrategy,
-PlantioArvoreStrategy). 2. Elaboração do diagrama UML do
-Strategy. 3. Desenvolvimento de testes. 4. Escrita da
-documentação. 5. Leitura de materiais bibliográficos: Design
-Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Strategy (TokenStrategy,
-ReciclagemStrategy, TransporteStrategy,
-EconomiaRecursosStrategy, DescarteCorretoStrategy,
-PlantioArvoreStrategy). 2. Elaboração do diagrama UML do
-Strategy. 3. Desenvolvimento de testes. 4. Escrita da
-documentação. 5. Leitura de materiais bibliográficos: Design
-Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
-| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy,
-ReciclagemStrategy, TransporteStrategy,
-EconomiaRecursosStrategy, DescarteCorretoStrategy,
-PlantioArvoreStrategy). 2. Elaboração do diagrama UML do
-Strategy. 3. Desenvolvimento de testes. 4. Escrita da
-documentação. 5. Leitura de materiais bibliográficos: Design
-Patterns: Elements of Reusable Object-Oriented Software
-(Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+|Nome do Membro | Contribuição (Padrões – FOCO_3) | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---|---|---|---|
+| Artur Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Gabriel Lopes de Amorim | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
+| Lucas Mendonça Arruda | 1. Implementação do código do Padrão Strategy (TokenStrategy, ReciclagemStrategy, TransporteStrategy, EconomiaRecursosStrategy, DescarteCorretoStrategy, PlantioArvoreStrategy). 2. Elaboração do diagrama UML do Strategy. 3. Desenvolvimento de testes. 4. Escrita da documentação. 5. Leitura de materiais bibliográficos: Design Patterns: Elements of Reusable Object-Oriented Software (Gamma et al., 1994). | Excelente | Registro nos Versionamentos do Documento de GoF Estrutural, conforme [Histórico de versão](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/docs/PadroesDeProjeto/3.3.3Strategy.md) , [codigo](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/App/tokens/servicos/token_strategy.py), [teste](https://github.com/UnBArqDsw2025-2-Turma02/2025.2_T02_G4_SustentabilidadeJ-_Entrega_03/blob/main/backend/tests/test_gof_patterns_standalone.py). |
